k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clawhub-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: clawhub.yafex.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clawhub-service
            port:
              number: 80
  tls:
  - hosts:
    - clawhub.yafex.cn
    secretName: clawhub-tls-secret
